Java 11 & 17 without modules